# YADML_gui

./: CMakeLists.txt  authwindow.cpp  authwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  workersettingsdialog.cpp  workersettingsdialog.h
